# pico-hsm

./: .gitignore  .gitmodules  .uncrustify.cfg  CMakeLists.txt  Dockerfile  README.md  ac.c  aes.c  bignum.c  bn.c  build_pico_hsm.sh  burn-cvcerts.py  call-ec.c  call-rsa.c  ccid-types.h  ccid.c  ccid.h  debug.c  ec_p256k1.c  ec_p256k1.h  ecc-ed25519.c  ecc-mont.c  ecc-x448.c  file.c  file.h  flash.c  gnuk.h  hsm2040.c  hsm2040.h  jpc-ac_p256k1.h  jpc_p256k1.c  low_flash.c  mod25638.h  modp256k1.c  neug.c  openpgp-do.c  openpgp.c  patch_vidpid.sh  random.c  rsa.c  (+9 more)
.github/: FUNDING.yml
.github/workflows/: build.yml  codeql.yml  nightly.yml  test.yml
doc/: aes.md  asymmetric-ciphering.md  backup-and-restore.md  extra_command.md  public_key_authentication.md  rsa_4096.md  scs3.md  sign-verify.md  store_data.md  usage.md
polarssl/: aes.h  bignum.h  bn_mul.h  config.h  rsa.h
src/fs/: file.c  file.h  flash.c  low_flash.c
src/hsm/: CMakeLists.txt  cmd_bip_slip.c  cmd_challenge.c  cmd_change_pin.c  cmd_cipher_sym.c  cmd_decrypt_asym.c  cmd_delete_file.c  cmd_derive_asym.c  cmd_external_authenticate.c  cmd_extras.c  cmd_general_authenticate.c  cmd_initialize.c  cmd_key_domain.c  cmd_key_gen.c  cmd_key_unwrap.c  cmd_key_wrap.c  cmd_keypair_gen.c  cmd_list_keys.c  cmd_mse.c  cmd_pso.c  cmd_puk_auth.c  cmd_read_binary.c  cmd_reset_retry.c  cmd_select.c  cmd_session_pin.c  cmd_signature.c  cmd_update_ef.c  cmd_verify.c  crypto_utils.c  crypto_utils.h  cvc.c  cvc.h  cvcerts.h  dkek.c  dkek.h  eac.c  eac.h  files.c  files.h  hash_utils.c  (+16 more)
src/openpgp/: ac.c  call-ec_p256k1.c  config.h  debug.c  ecc-ed448.c  flash_openpgp.c  mod.c  mod25638.c  modp256k1.h  openpgp-do.c  p448.c  p448.h  shake256.c  shake256.h
src/rng/: neug.c  neug.h  random.c  random.h
src/usb/: ccid.h  usb_descriptors.c  usb_descriptors.h
tests/: build-in-docker.sh  conftest.py  const.py  docker_env.sh  hsm_key_container_test.c  hsm_object_authorization_test.c  hsm_object_provider_test.c  memory.tar.gz.enc  memory_archive.py  run-test-in-docker.sh  run-test-pkcs11-in-docker.sh  start-up-and-test-pkcs11.sh  start-up-and-test.sh  startup.sh  utils.py
tests/docker/bookworm/: Dockerfile
tests/docker/bullseye/: Dockerfile
tests/docker/jammy/: Dockerfile
tests/pico-hsm/: test_000_info.py  test_003_challenge.py  test_004_key_domains.py  test_005_dkek.py  test_010_pin.py  test_011_security_regressions.py  test_012_large_files.py  test_013_object_compatibility.py  test_014_key_unwrap_hardening.py  test_020_keypair_gen.py  test_021_key_import.py  test_022_key_exchange.py  test_023_key_generation.py  test_025_key_export.py  test_030_signature.py  test_040_decrypt.py  test_050_cipher.py  test_051_chachapoly.py  test_052_aes_ext.py  test_060_mac.py  test_070_hkdf.py  test_071_pbkdf2.py  test_072_x963.py  test_080_pka.py  test_090_xkek.py  test_095_bip_slip.py  test_keypair_gen.py  test_pin.py  test_signature.py
tests/scripts/: aes.sh  asym_cipher.sh  backup.sh  func.sh  initialize.sh  keygen.sh  pkcs11.sh  pkcs11_security_regressions.sh  pkcs11_test.sh  reset.sh  sc_hsm_test.sh  sign_and_verify.sh  store_binary.sh
tools/: pico-hsm-attestation.py  pico-hsm-patch-vidpid.sh  pico-hsm-tool.py
tools/secure_key/: macos.py  windows.py
workflows/: autobuild.sh
